# informationviz

./: pyproject.toml
data/: 001_138v_2023_20250312-162058.csv  360ccd7f-9018-42b4-b5e5-392c073fc9e1_Data.csv  HDPulse_data_export.csv  finland-urban-population.csv  sdg_connections.csv  sdg_network.csv  share-of-urban-population-living-in-slums.csv  statfin_mkan_pxt_11ie_20250313_122422.csv  statfin_rtie_pxt_12ra_20250313_122818.csv  urbanandruralpopulation new.csv
notebooks/: Assignment4.ipynb  Untitled.ipynb  as3task2.ipynb  average_usage.ipynb  countries.ipynb  creating-networks.ipynb  dimensionality-reduction.ipynb  months_bike_usage.ipynb  pca.ipynb  task3.ipynb  yearly_pollution.ipynb
notebooks/.ipynb_checkpoints/: Assignment4-checkpoint.ipynb  Assignment4T2-checkpoint.ipynb  Untitled-checkpoint.ipynb  countries-checkpoint.ipynb  pca-checkpoint.ipynb  task3-checkpoint.ipynb  usage_map-checkpoint.ipynb  yearly_pollution-checkpoint.ipynb
src/infoviz/: helper.py  utils.py
